--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
     <div class="modal fade" id="lightbox1" tabindex="-1" role="dialog" aria-labelledby="lightbox1Label" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <img src="Image1.jpg" class="img-fluid" alt="Image 1">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="img-fluid" alt="Image 1">
             </div>
         </div>
     </div>
@@ -62,8 +62,8 @@
                 <div class="card" data-toggle="modal" data-target="#lightbox1">
                     <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top" alt="Image 1">
                     <div class="card-body">
-                        <h6 class="card-title">Card 1</h6>
-                        <p class="card-text">Description for Card 1</p>
+                        <h6 class="card-title">Card 2</h6>
+                        <p class="card-text">Description for Card 2</p>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
     <div class="modal fade" id="lightbox1" tabindex="-1" role="dialog" aria-labelledby="lightbox1Label" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <img src="Image1.jpg" class="img-fluid" alt="Image 1">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="img-fluid" alt="Image 1">
             </div>
         </div>
     </div>
@@ -91,8 +91,8 @@
                 <div class="card" data-toggle="modal" data-target="#lightbox1">
                     <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top" alt="Image 1">
                     <div class="card-body">
-                        <h6 class="card-title">Card 1</h6>
-                        <p class="card-text">Description for Card 1</p>
+                        <h6 class="card-title">Card 3</h6>
+                        <p class="card-text">Description for Card 3</p>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
     <div class="modal fade" id="lightbox1" tabindex="-1" role="dialog" aria-labelledby="lightbox1Label" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <img src="Image1.jpg" class="img-fluid" alt="Image 1">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="img-fluid" alt="Image 1">
             </div>
         </div>
     </div>
@@ -120,14 +120,11 @@
                 <div class="card" data-toggle="modal" data-target="#lightbox1">
                     <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top" alt="Image 1">
                     <div class="card-body">
-                        <h6 class="card-title">Card 1</h6>
-                        <p class="card-text">Description for Card 1</p>
+                        <h6 class="card-title">Card 4</h6>
+                        <p class="card-text">Description for Card 4</p>
                     </div>
                 </div>
             </div>
-
-            <!-- Add more cards (Card 2, Card 3, etc.) following the same structure -->
-
         </div>
     </div>
 
@@ -136,7 +133,7 @@
     <div class="modal fade" id="lightbox1" tabindex="-1" role="dialog" aria-labelledby="lightbox1Label" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <img src="Image1.jpg" class="img-fluid" alt="Image 1">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="img-fluid" alt="Image 1">
             </div>
         </div>
     </div>
@@ -149,8 +146,8 @@
                 <div class="card" data-toggle="modal" data-target="#lightbox1">
                     <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top" alt="Image 1">
                     <div class="card-body">
-                        <h6 class="card-title">Card 1</h6>
-                        <p class="card-text">Description for Card 1</p>
+                        <h6 class="card-title">Card 5</h6>
+                        <p class="card-text">Description for Card 5</p>
                     </div>
                 </div>
             </div>
@@ -163,7 +160,7 @@
     <div class="modal fade" id="lightbox1" tabindex="-1" role="dialog" aria-labelledby="lightbox1Label" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <img src="Image1.jpg" class="img-fluid" alt="Image 1">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="img-fluid" alt="Image 1">
             </div>
         </div>
     </div>
